stage0/tests/compile_fail/ufcs/no_method.dg
// No free function named `frobnicate` accepts the receiver type.
func main() -> i32 {
    let x = 5
    x.frobnicate()
}
